Name:                elm-get
Version:             0.1.1.2
Synopsis:            Tool for sharing and using Elm libraries
Description:         elm-get lets you install, update, and publish Elm libraries

Homepage:            http://github.com/elm-lang/elm-get

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          info@elm-lang.org
Copyright:           Copyright: (c) 2013-2014 Evan Czaplicki

Category:            Language

Build-type:          Simple
Cabal-version:       >=1.9

source-repository head
  type:     git
  location: git://github.com/elm-lang/elm-get.git

Library
  ghc-options:         -threaded -O2 -W
  Hs-Source-Dirs:      src
  exposed-modules:     Get.Generate.Docs,
                       Get.Generate.Elm,
                       Get.Generate.Html,
                       Utils.Commands,
                       Utils.Http,
                       Utils.Paths
  Build-depends:       aeson,
                       aeson-pretty,
                       base >=4.2 && <5,
                       binary,
                       blaze-html,
                       bytestring,
                       containers,
                       directory,
                       Elm >= 0.12,
                       filepath,
                       HTTP,
                       http-client >= 0.3,
                       http-client-tls,
                       http-types,
                       json,
                       mtl,
                       network,
                       optparse-applicative,
                       parsec,
                       pretty,
                       process,
                       resourcet,
                       text,
                       vector

Executable elm-get
  Main-is:             Get/Main.hs
  ghc-options:         -threaded -O2 -W
  Hs-Source-Dirs:      src
  Build-depends:       aeson,
                       aeson-pretty,
                       base >=4.2 && <5,
                       binary,
                       blaze-html,
                       bytestring,
                       containers,
                       directory,
                       Elm >= 0.12,
                       filepath,
                       HTTP,
                       http-client >= 0.3,
                       http-client-tls,
                       http-types,
                       json,
                       mtl,
                       network,
                       optparse-applicative,
                       parsec,
                       pretty,
                       process,
                       resourcet,
                       text,
                       vector
